overflow fix, layout.pug added

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
-  overflow-x: hidden;
 
   @include respond(tab-land) {
     // width < 1200?
@@ -18,7 +17,7 @@ html {
   }
 }
 
-body {
+main {
   overflow-x: hidden;
 }
 
